# mdlp-discretization

./: MANIFEST.in  README.md  WINDOWS_INSTALL.md  pyproject.toml  requirements.txt  setup.py  setup_cpu.py  setup_gpu.py
mdlp/: __init__.py  gpu.py
